--- a/node/package.json
+++ b/node/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "dotenv": "^16.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^108.0.1",
