--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -18,10 +18,12 @@
     "sourceMap": true
   },
   "include": [
-    "/home/*/tsp/royaltsp/types"
+    "/home/*/tsp/royaltsp/royaltsp-types",
+    "C:/Users/*/tsp/royaltsp/royaltsp-types"
   ],
   "exclude": [
     "node_modules",
-    "/home/*/tsp/royaltsp/types/samples"
+    "/home/*/tsp/royaltsp/royaltsp-types/samples",
+    "C:/Users/*/tsp/royaltsp/royaltsp-types/samples",
   ]
 }
