--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "split-file-stream": "^2.0.0"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.20"
+    "@types/fluent-ffmpeg": "^2.1.20",
+    "tsconfig-paths": "^4.2.0"
   }
 }
