- added more useful ytdl implementation

--- a/node/package.json
+++ b/node/package.json
@@ -7,11 +7,13 @@
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "clipboardy": "^3.0.0",
     "dotenv": "^16.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^108.0.1",
     "nodejs-file-downloader": "^4.10.2",
-    "split-file-stream": "^2.0.0"
+    "split-file-stream": "^2.0.0",
+    "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.20",
